[gd_scene load_steps=5 format=3 uid="uid://cqeukjpkmgf30"]

[ext_resource type="Script" uid="uid://8nbe8xp0bckl" path="res://Scripts/UI/message.gd" id="1_mjkqt"]
[ext_resource type="Texture2D" uid="uid://toljtxufdw1n" path="res://Assets/Textures/ProfilePictures/toniabv69_profile_picture.png" id="2_mjkqt"]
[ext_resource type="Texture2D" uid="uid://oduoc7f6clob" path="res://Assets/Textures/heart.png" id="3_mq301"]

[sub_resource type="SphereMesh" id="SphereMesh_mjkqt"]

[node name="Message" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -401.0
offset_bottom = -932.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_mjkqt")

[node name="HeartButton" type="Button" parent="."]
layout_mode = 0
offset_left = 1362.0
offset_right = 1525.0
offset_bottom = 148.0

[node name="CopyButton" type="Button" parent="."]
layout_mode = 0
offset_right = 1362.0
offset_bottom = 148.0

[node name="MeshInstance2D" type="MeshInstance2D" parent="."]
clip_children = 2
position = Vector2(49, 44.000004)
scale = Vector2(60, 60)
mesh = SubResource("SphereMesh_mjkqt")

[node name="Image" type="Sprite2D" parent="MeshInstance2D"]
position = Vector2(0.012499982, -6.519258e-08)
scale = Vector2(0.010742186, 0.011328125)
texture = ExtResource("2_mjkqt")

[node name="NameLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 102.0
offset_right = 380.0
offset_bottom = 87.0
theme_override_font_sizes/font_size = 30
text = "toniabv69"
vertical_alignment = 1

[node name="TimeLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 259.0
offset_top = 14.0
offset_right = 367.0
offset_bottom = 74.0
theme_override_font_sizes/font_size = 24
text = "3:23 AM"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MessageLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 102.0
offset_top = 75.0
offset_right = 1362.0
offset_bottom = 141.0
theme_override_font_sizes/font_size = 28
text = "ala bala portokala ti si ebahti mangala"

[node name="HeartIcon" type="Sprite2D" parent="."]
visible = false
position = Vector2(1441, 74)
scale = Vector2(0.05, 0.05)
texture = ExtResource("3_mq301")

[connection signal="mouse_entered" from="HeartButton" to="." method="_on_heart_button_mouse_entered"]
[connection signal="pressed" from="HeartButton" to="." method="_on_heart_button_pressed"]
[connection signal="pressed" from="CopyButton" to="." method="_on_button_pressed"]
